...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caloriesInfoLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/breakfastLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/breakfastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/addFoodToBreakfastTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
...
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lunchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lunchRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToLunchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
...
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dinnerRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToDinnerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
...
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/snacksLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/snacksRecyclerView"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToSnacksTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
...
