...
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/diaryToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

...
                android:background="@drawable/rounded_corner_off_white"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp">

                <Button
                    android:id="@+id/previousDayButton"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_left_arrow"
                    android:contentDescription="@string/previous_day"
                    android:onClick="previousDay"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="@string/today"
                    android:textAlignment="center"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/nextDayButton"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_right_arrow"
                    android:contentDescription="@string/next_day"
                    android:onClick="nextDay"
                    app:layout_constraintEnd_toEndOf="parent"
...
